refactor: check/tracker端点改为数组
